Bug 60558 - FILEOPEN DOCX: floating table w/parallel wrap followed by an inline table doesn't wrap beside in empty space on right
Summary: FILEOPEN DOCX: floating table w/parallel wrap followed by an inline table doe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: high normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0
Keywords: filter:docx, notBibisectable
Depends on: 76022 105261
Blocks: DOCX-Anchor-and-Text-Wrap DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2013-02-09 20:17 UTC by Michelle
Modified: 2025-03-15 17:01 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
This is the original Microsoft Word 10 file (1000.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-02-09 20:17 UTC, Michelle
Details
Part of terminal output while opening attached document (35.52 KB, text/plain)
2013-02-09 20:29 UTC, Jorendc
Details
comparison screenshot (291.20 KB, image/png)
2013-12-12 10:56 UTC, retired
Details
screenshot (334.25 KB, application/pdf)
2018-11-29 08:44 UTC, Anderson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michelle 2013-02-09 20:17:45 UTC
Created attachment 74505 [details]
This is the original Microsoft Word 10 file

I have some business lable files that are created in Microsoft Office 10.  When I try to open them in LibreOffice 4.0 with a text document the formatting is ont correct.  The file is save as a .docx file.  The main problem is that I have one part of the lable upside down and it opens right side up in LibreOffice.  How can I fix this?  I want to switch programs, but if I can not turn part of the lable upside down I will not be able to use it.  I have added the original Word file and how it looks when I open it in LibreOffice.
Comment 1 Jorendc 2013-02-09 20:28:31 UTC
I can confirm the document doesn't open correct.
Tested using Linux Mint 14 x64 with LibreOffice Version 4.1.0.0.alpha0+ (Build ID: df931a5b0f48707e34ebfacb695996198ece8f4). Therefore I mark this as new.

I mark this bug as 'Normal High':
Normal: you can open it
High: absolutely not correctly

I'll upload some terminal output.

Kind regards,
Joren
Comment 2 Jorendc 2013-02-09 20:29:04 UTC
Created attachment 74509 [details]
Part of terminal output while opening attached document
Comment 3 Urmas 2013-02-10 01:37:27 UTC Comment hidden (obsolete)
Comment 4 retired 2013-12-12 10:56:45 UTC
Created attachment 90657 [details]
comparison screenshot
Comment 5 QA Administrators 2015-04-19 03:23:14 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2015-06-18 17:14:14 UTC
Confirmed the mess. Even worse than the screenshot.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 437210d58f32177ef1829d704f7f4d2f1bbfbfdd
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-18_07:21:56
Locale: fi-FI (fi_FI)
Comment 7 Justin L 2016-12-05 15:28:30 UTC
confirmed that this looks absolutely terrible still in LO5.3beta1.  In fact, it has never looked even remotely correct ever (last testable by me is 3.6).  Marking as not bibisectable.
Comment 8 QA Administrators 2017-12-06 09:46:35 UTC Comment hidden (obsolete)
Comment 9 Timur 2018-11-05 16:36:11 UTC Comment hidden (obsolete)
Comment 10 Shulammite 2018-11-29 08:36:53 UTC
Bug still exists in version.

  Version: 6.3.0.0.alpha0+ (x64)
  Build ID: 0f25a3c36f27fd51453b9a9115f236b83c143684
  CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
  TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-27_20:06:55
  Locale: zh-TW (zh_TW); UI-Language: en-US
  Calc: threaded
Comment 11 Anderson 2018-11-29 08:44:27 UTC
Created attachment 147121 [details]
screenshot

Still exists in version :
Version: 6.3.0.0.alpha0+ (x64)
Build ID: 0f25a3c36f27fd51453b9a9115f236b83c143684
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-27_20:06:55
Locale: zh-TW (zh_TW); UI-Language: en-US
Calc: threaded
Comment 12 QA Administrators 2019-11-30 03:39:04 UTC Comment hidden (obsolete, spam)
Comment 13 Justin L 2020-03-18 17:22:52 UTC
still a complete disaster for 7.0 master
Comment 14 QA Administrators 2022-03-19 03:32:36 UTC Comment hidden (obsolete)
Comment 15 Gabor Kelemen (allotropia) 2023-05-24 09:33:35 UTC
Still quite bad, even if we have now some floating table support.
Here the left table is floating, the right side one is not. They are separated by a line break character. 
This separator is not imported in Writer, so the right side one appears below the left side one.
Comment 16 Justin L 2023-08-18 18:49:11 UTC
This bug report is now about wrapping instead of floating tables - modifying the meta tags.

This is probably related to several bugs:
-LO only "wraps tables" for optimal wrap, and not parallel wrap (bug 76022)
-LO doesn't adjust paragraph margin start when wrapping around frame(bug 105261)
Comment 17 Miklos Vajna 2023-12-04 07:51:32 UTC
Let me look what's the problem here, the second inline table should wrap around the first floating table.
Comment 18 Commit Notification 2023-12-05 09:16:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/868140fcc1311259b9d5f666637b33d226511a53

tdf#60558 sw floattable: allow wrap of table on the right of a floattable

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.